# tree-sitter-fossil_wiki

./: .editorconfig  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-fossil-wiki.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_fossil_wiki/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFossilWiki/: fossil_wiki.h
bindings/swift/TreeSitterFossilWikiTests/: TreeSitterFossilWikiTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: html.txt  links.txt  mixed.txt  verbatim.txt  wiki_markup.txt
